# mcp-shell

./: .gitignore  LICENSE  QUICK_START.md  README.md  demo.py  pyproject.toml  requirements.txt  setup.py
mcp_terminal/: __init__.py  character_chat.py  chat.py  cli.py  config.py  core.py
